--- a/Music_Player/index.html
+++ b/Music_Player/index.html
@@ -272,7 +272,7 @@
                 }
 
                 progress.onmouseup = function() {
-                    isSeeking = false; // Ngừng tua khi người dùng nhả chuột
+                    isSeeking = false; 
                 };
 
                 // khi next
